--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
