--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-rest",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
