--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "nodem src/index.js",
     "dev": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
